edit menu styles, compress photos

--- a/app/olds/kontakty.html
+++ b/app/olds/kontakty.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru" class="title-page">
+<html lang="ru" class="contacts-page title-page">
 
 <head>
+
 	<meta charset="utf-8">
+
 	<meta name="robots" content="all">
-	<title>Дилерам КПД-100 Завод домокомплектов</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="Дилерам">
+	<title>КПД-100 Завод домокомплектов. Дома по цене квартиры.</title>
+	<meta name="description" content="Строим быстровозводимые дома из металлоконструкций. Гарантия на наши дома от 50 лет. Строительная компания КПД-100
+	Завод домокомплектов предлагает для Вас дома от 2,1 млн руб!">
+	<meta name="keywords" content="Контакты">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="yandex-verification" content="3b96c8f18808642f" />
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.8">
+	<link rel="stylesheet" href="title.styles.css?v=3.7">
 
 	<meta property="og:title" content="Строительство домов в Хабаровске"/>
 	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
@@ -19,17 +22,17 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.8">
+	<link rel="stylesheet" href="css/main.min.css?v=3.7">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.8"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.8">
+	<link rel="stylesheet" href="styles.css?v=3.7">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -96,7 +99,9 @@
 			<div class="side-panel-content">
 				<div class="side-panel-close"></div>		<div class="side-panel-content-inner"></div>
 			</div>
-		</div>   
+		</div>
+
+
 
 
 
@@ -108,19 +113,19 @@
 							<a href="/">
 								<img src="img/logo.png" alt="logo" class="img-responsive">
 							</a>
-						</div>
 					</div>
 				</div>
-				<div class="layout column layout_6" >
-					<div class="widget-4 horizontal menu-6 wm-widget-menu widget-type-menu_horizontal editorElement layer-type-widget" data-screen-button="more" data-responsive-tl="button" data-responsive-tp="button" data-responsive-ml="columned" data-more-text="..." data-child-icons="0">
+			</div>
+			<div class="layout column layout_6" >
+				<div class="widget-4 horizontal menu-6 wm-widget-menu widget-type-menu_horizontal editorElement layer-type-widget" data-screen-button="more" data-responsive-tl="button" data-responsive-tp="button" data-responsive-ml="columned" data-more-text="..." data-child-icons="0">
 
-						<div class="menu-button">Меню</div>
+					<div class="menu-button">Меню</div>
 
-						<div class="menu-scroll">
-							<ul>
-								<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
-								<li class="menu-item">
-									<a href="about.html"><span class="menu-item-text">О заводе</span></a>
+					<div class="menu-scroll">
+						<ul>
+							<li class="menu-item"><a href="/"><span class="menu-item-text">Дома</span></a></li>
+							<li class="menu-item">
+								<a href="about.html"><span class="menu-item-text">О заводе</span></a>
 								<!-- <ul>
 									<li><a href="kontakty.html" ><span class="menu-item-text">Контакты</span></a></li>
 								</ul> -->
@@ -207,38 +212,127 @@
 				</div>
 			</div>
 		</div>
+		
 	</div>
+
 
 
 	<div class="editorElement layer-type-block ui-droppable block-19" >
 		<div class="editorElement layer-type-block ui-droppable block-20" >
 			<div class="editorElement layer-type-block ui-droppable block-21" >
-				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Дилерам</div> 
-				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дилерам</h1>
+				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Контакты</div> 
+				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">
+					Контакты
+				</h1>
 				<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
 
-					<div class="type-text-block frames-content">
+					<script>
+						var hsOptions = {
+							align:'center',
+							transitions:['expand', 'crossfade'],
+							outlineType:'rounded-white',
+							fadeInOut:true,
+							dimmingOpacity:0.5,
+						}
+					</script>
 
-						<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за 10 дней!</h2>
-						<p>Гарантия на наши дома - 50 лет!</p>
-						<p>Преимущества нашей технологии в скорости строительства и в качестве производства!</p>
-						<h2>Завод домокомплектов КПД 100 приглашает к сотрудничеству дилеров в регионах: г. Владивосток, Южно - Сахалинск, г. Комсомольск, г. Советская Гавань</h2>
-						<h2>В чем Ваша выгода?</h2>
-						<h3>Чтобы Вы смогли посчитать Вашу выгоду от сотрудничества с нами, приведем пример:</h3>
-						<h3><span>Наш дом 150 кв. м. в 2 этажа, мы продаем за 4 360 тыс. рублей.</span></h3>
-						<p>Эта цена включает в себя:</p>
-						<ul>
-							<li>Производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели;</li>
-							<li>Строительство домокомплекта на участке: фундамент, монтаж колонно-ригельного каркаса дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
-							<li>Дополнительные услуги: строительство кровли с утеплением, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа, стяжка пола, покрытие фасада специальной фасадной краской с декоративными элементами Фахверк, устройство вентиляции.</li>
-						</ul>
-						<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 2 400 тыс. рублей!</span></h3>
-						<h3>Монтаж дома, все дополнительные услуги по дому Вы можете выполнять в своем регионе самостоятельно и тем самым - зарабатывать!</h3>
-						<h3><span>Вся разница в цене - Ваша!</span></h3>
-						<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Свою прибыль Вы будете получать очень быстро!</h3>
-						<h2>Станьте партнером уникального завода домокомплектов КПД 100!</h2>
+					<script src="http://maps.googleapis.com/maps/api/js?key=&amp;language=ru"></script>
 
+					<script type="text/javascript">mjsMap({data: [{name: "Офис", coords: "59.850996,30.301453000000038", desc: ""}],zoom: "17",center: "59.850996,30.301453000000038",type: "google",id: 'myMap' });</script>
+
+
+
+					<div class="localcontacts2">
+						<div class="localcontacts__adress">
+							<div class="localcontacts__adress-text localcontacts__adress-text--nomar localnomargin">
+
+								<div class="localcontacts__adress-inner">
+									<b>Отдел продаж</b>
+									<a href="tel:+7 (4212) 69-81-00">+7 (4212) 69-81-00</a>
+								</div>
+
+
+								<div class="localcontacts__top-discription localcontacts__top-discription--nomar">
+									<span>Прием звонков: с 9:00 до 20:00 (Пн-Пт)</span>
+								</div>
+
+								<div class="localcontacts__adress-inner">
+									<b>Адрес отдела продаж</b>
+									<p>Россия, г. Хабаровск, ул. Ленина 18в</p>
+								</div>
+
+								<div class="localcontacts__adress-inner">
+									<b>Адрес завода</b>
+									<p>Россия, г. Хабаровск, ул. Иркутская, 8</p>
+								</div>
+
+								<div class="localcontacts__adress-inner">
+									<b>Реквизиты компании</b>
+									ООО "КПД-100"
+									Юридический адрес: 680000, Хабаровский край, город Хабаровск, улица Истомина, дом 22 корпус а, офис 5
+									ОГРН 1192724011105
+								</div>
+
+							</div>
+							<div class="clear"></div>
+						</div>
 					</div>
+
+					<h2> Частный дом или квартира? </h2>
+					<p> Актуальной проблемой в больших городах является доступное и комфортное жильё. Наиболее привлекательным решением представляется строительство быстровозводимого дома, цена которого минимальна, а комфорт и качество неоспоримы.</p>
+
+					<script type="text/javascript">
+						function toggle_show(id) {
+							document.getElementById(id).style.display = document.getElementById(id).style.display == 'none' ? 'block' : 'none';
+						}
+					</script>
+
+					<p onClick="toggle_show('bla-bla2')"> <a> Подробнее... </a>
+						<div id="bla-bla2" style="display: none">
+							<p> Согласитесь, если нет достаточных средств на покупку квартиры в новостройке, вариантов улучшения жилищных условий не так много: </p>
+							<ul>
+								<li> построить собственный, просторный быстровозводимый дом, цена которого составляет всего лишь 2100 000 рублей; </li>
+								<li> снимать жильё, но при этом жить в состоянии крайней нужды; </li>
+								<li> взять на долгий срок квартиру в ипотеку и всю жизнь выплачивать значительные денежные взносы; </li>
+								<li> жить совместно с родителями продолжительное время, в надежде, что квартира рано или поздно перейдет Вам по наследству. </li>
+							</ul>
+
+							<p>Преимущества жизни в коттедже:</p>
+							<ul>
+								<li>Удобная площадь для комфортного проживания семьи. Отдельные комнаты, возможность расширения жилой площади, участок земли для создания приусадебного хозяйства, парковка, возможность обустроить площадку для игр.</li>
+								<li>Экология: низкий уровень шума, зеленая зона, свежий воздух, близость водных объектов;</li>
+								<li>Развитая инфраструктура;</li>
+								<li>Безопасность: охраняемая территория поселка;</li>
+								<li>Невысокие цены на коммунальные услуги;</li>
+							</ul>
+
+							<p>Наиболее часто при строительстве коттеджа ценятся такие составляющие:</p>
+							<ul>
+								<li>возможность учесть все предпочтения покупателя;</li>
+								<li>благоустройство и комфорт;</li>
+								<li>собственность и земля.</li>
+							</ul>
+
+							<h2> Быстровозводимый дом, а цена как у квартиры</h2>			 
+							<p>Наша Компания поможет Вам быстро и недорого построить свой дом, учитывая все Ваши пожелания.</p>
+							<p>Мы производим все необходимые составляющие для строительства надежного дома.</p>
+							<p>Каркас Вашего дома будет из железобетонных колонн и ригелей. Трехслойные панельные стены, укрепленные арматурой.</p>
+							<p>У панелей, для удобства делаем 2 слоя: внутри - гладкий, специально для покрытия обоями и наружный под окраску.</p>
+							<p>Перекрытия в Вашем доме будут сделаны также из трехслойных панелей: ребристая плита, утеплитель и бетонная стяжка.</p>
+
+							<p><strong>Важно! Главное достоинство нашей технологии &mdash; скорость и качество строений.</strong></p>
+							<p>Завод домокомплектов &laquo;КПД 100&raquo; производит материалов и комплектующих на 8-12 коттеджей в месяц.</p>
+							<p><strong>Внимание! Железобетонная рама, состоящая из колонн и ригелей у нас имеет несущую функцию. </strong></p>
+							<span>Этот принцип также используется при строительстве монолитных домов и позволяет нам делать свободную планировку и потолки любой высоты.<br/><br/></span>
+
+							<span><strong>СПРАВКА!</strong></span>
+							<span><strong>Кроме изменения несущей функции мы улучшили технологию и самих панелей.</strong></span>
+							<p>Наши панели длинные до 6 метров и горизонтальные - это позволило уменьшить количество швов и структуру. А надежные перекрытия уже давно положительно себя зарекомендовали при строительстве быстровозводимых домов. Всё это позволяет добиться прочности и долговечности наших строений.</p>
+							<p>Ваш дом будет сделан в течение 1 месяца из качественных трехслойных панелей от завода - изготовителя, колон и ригелей, а также любых составляющих по Вашему усмотрению. Срок гарантии на дом от 50 лет.<br/></p>
+							<p>Мы можем построить дом на Вашем участке , а также Вы можете приобрести один из наших участков в понравившемся Вам районе города.</p>
+							<p><strong>Важно! Вы приобретаете быстровозводимый дом, уже с готовым фасадом, утеплителем, ровными стенами для косметического ремонта по доступной цене с гарантией от 50 лет!</strong></p>
+						</div>
+					</p>
 
 				</article>
 			</div>
@@ -246,11 +340,9 @@
 	</div>
 
 
-
 	<div class="widget-20">
 		<div id="map"></div>
 	</div>
-
 
 
 	<div class="editorElement layer-type-block ui-droppable block-18" >
@@ -320,10 +412,8 @@
 	</div>
 
 
-
-
-
 </div>
+
 
 <div class="d-none">
 
@@ -333,9 +423,7 @@
 		</div>
 		<h4>Позвоните нам, для бесплатной консультации</h4>
 		<span>
-			<a href="tel:+7 (4212) 69-81-00">
-				<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
-			+7 (4212) 69-81-00</a>
+			<a href="tel:+7 (4212) 69-81-00"><svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>+7 (4212) 69-81-00</a>
 		</span>
 		<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
 		<!-- Hidden Required Fields -->
