--- a/app/olds/commercial-khv.html
+++ b/app/olds/commercial-khv.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="ru" class="title-page">
+<html lang="ru" class="contacts-page title-page">
 
 <head>
+
 	<meta charset="utf-8">
+
 	<meta name="robots" content="all">
-	<title>Дилерам КПД-100 Завод домокомплектов</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="Дилерам">
+	<title>КПД-100 Завод домокомплектов. Дома по цене квартиры.</title>
+	<meta name="description" content="Строим быстровозводимые дома из металлоконструкций. Гарантия на наши дома от 50 лет. Строительная компания КПД-100 Завод домокомплектов предлагает для Вас дома от 3.10 млн руб!">
+	<meta name="keywords" content="Контакты">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="yandex-verification" content="3b96c8f18808642f" />
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.8">
+	<link rel="stylesheet" href="title.styles.css?v=3.7">
 
 	<meta property="og:title" content="Строительство домов в Хабаровске"/>
 	<meta property="og:description" content="Каменные тёплые дома по цене квартиры - от 2,95 млн. руб. Дом под ключ за 3 месяца. Заводское качество домов и гарантия 50 лет. Ипотека от 1,3%."/>
@@ -19,17 +21,17 @@
 	<meta property="og:image" content="https://kpd100zavod.ru/img/houses-top-image.jpg">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.8">
+	<link rel="stylesheet" href="css/main.min.css?v=3.7">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.8"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.7"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.8">
+	<link rel="stylesheet" href="styles.css?v=3.7">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -96,7 +98,9 @@
 			<div class="side-panel-content">
 				<div class="side-panel-close"></div>		<div class="side-panel-content-inner"></div>
 			</div>
-		</div>   
+		</div>
+
+
 
 
 
@@ -207,36 +211,68 @@
 				</div>
 			</div>
 		</div>
+		
 	</div>
+
 
 
 	<div class="editorElement layer-type-block ui-droppable block-19" >
 		<div class="editorElement layer-type-block ui-droppable block-20" >
 			<div class="editorElement layer-type-block ui-droppable block-21" >
-				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Дилерам</div> 
-				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дилерам</h1>
+				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Контакты</div> 
+				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Коммерческая недвижимость</h1>
 				<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
 
-					<div class="type-text-block frames-content">
+					<img src="img/commercial-khv.jpg" alt="" class="img-responsive">
 
-						<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за 10 дней!</h2>
-						<p>Гарантия на наши дома - 50 лет!</p>
-						<p>Преимущества нашей технологии в скорости строительства и в качестве производства!</p>
-						<h2>Завод домокомплектов КПД 100 приглашает к сотрудничеству дилеров в регионах: г. Владивосток, Южно - Сахалинск, г. Комсомольск, г. Советская Гавань</h2>
-						<h2>В чем Ваша выгода?</h2>
-						<h3>Чтобы Вы смогли посчитать Вашу выгоду от сотрудничества с нами, приведем пример:</h3>
-						<h3><span>Наш дом 150 кв. м. в 2 этажа, мы продаем за 4 360 тыс. рублей.</span></h3>
-						<p>Эта цена включает в себя:</p>
+					<div class="text-commercial">
+						<h3>СТРОЙТЕ С НАМИ! ЛЮБОЙ ОБЪЕКТ В 2 РАЗА ДЕШЕВЛЕ И В 3 РАЗА БЫСТРЕЕ</h3>
 						<ul>
-							<li>Производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели;</li>
-							<li>Строительство домокомплекта на участке: фундамент, монтаж колонно-ригельного каркаса дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
-							<li>Дополнительные услуги: строительство кровли с утеплением, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа, стяжка пола, покрытие фасада специальной фасадной краской с декоративными элементами Фахверк, устройство вентиляции.</li>
+							<li>Хотите построить жилой дом на 60 квартир за 21 000 рублей/кв.м.?</li>
+							<li>Или торговый центр за 21 000 рублей/кв.м.?</li>
+							<li>А офисное здание или гостиницу на 500 кв.м. за 22 000 рублей/кв.м.?</li>
 						</ul>
-						<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 2 400 тыс. рублей!</span></h3>
-						<h3>Монтаж дома, все дополнительные услуги по дому Вы можете выполнять в своем регионе самостоятельно и тем самым - зарабатывать!</h3>
-						<h3><span>Вся разница в цене - Ваша!</span></h3>
-						<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Свою прибыль Вы будете получать очень быстро!</h3>
-						<h2>Станьте партнером уникального завода домокомплектов КПД 100!</h2>
+						<br>
+						<p><b>- Фантастические цены?</b></p>
+						<p><b>- ДА!</b></p>
+						<p><b>- ЭТО РЕАЛЬНЫЕ ЦЕНЫ ОТ ЗАВОДА КПД 100</b></p>
+						<br>
+						<p>Мы, Хабаровский завод домокомплектов «КПД 100»<br>⠀
+						Кроме частных домов, которые мы производим на заводе и собираем на участках всего за 5-7 дней, мы строим:</p>
+						<ul>
+							<li>жилые дома до 9 этажей</li>
+							<li>детские сады</li>
+							<li>торговые центры</li>
+							<li>офисные здания</li>
+							<li>склады, промышленные объекты</li>
+						</ul>
+						⠀
+						<p>В стоимость входит производство и монтаж.</p>
+						<ul>
+							<li>Фундамент</li>
+							<li>«Коробка» здания (колонно-ригельная система - сборный монолит, утепленные трехслойные стены)</li>
+							<li>Перекрытия</li>
+							<li>Фасад</li>
+							<li>Окна и двери</li>
+						</ul>
+						⠀
+						<p>Если у вас уже есть проект – мы его перепроектируем и пересогласуем.
+						Если нужно:</p>
+						<ol>
+							<li>разработаем проект</li>
+							<li>пройдем экспертизу проекта</li>
+							<li>получим все согласования и разрешения</li>
+						</ol>
+
+						<p>Предлагаем 4 варианта работы:</p>
+						<ol>
+							<li>изготовление и отгрузка домокомплекта</li>
+							<li>+ сборка домокомплекта</li>
+							<li>+ строительство «под ключ»</li>
+							<li>+ проектирование и получение всех согласований</li>
+						</ol>
+						⠀
+						<h3>СТРОИТЕЛЬСТВО С КПД-100 - ЭТО ПРОСТО, БЫСТРО И НАДЕЖНО!</h3>
 
 					</div>
 
@@ -246,11 +282,9 @@
 	</div>
 
 
-
 	<div class="widget-20">
 		<div id="map"></div>
 	</div>
-
 
 
 	<div class="editorElement layer-type-block ui-droppable block-18" >
@@ -320,10 +354,8 @@
 	</div>
 
 
-
-
-
 </div>
+
 
 <div class="d-none">
 
@@ -333,9 +365,7 @@
 		</div>
 		<h4>Позвоните нам, для бесплатной консультации</h4>
 		<span>
-			<a href="tel:+7 (4212) 69-81-00">
-				<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
-			+7 (4212) 69-81-00</a>
+			<a href="tel:+7 (4212) 69-81-00"><svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>+7 (4212) 69-81-00</a>
 		</span>
 		<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
 		<!-- Hidden Required Fields -->
