--- a/app/index.html
+++ b/app/index.html
@@ -1341,7 +1341,7 @@
 									<h2>В стоимость дома входит все:</h2>
 									<ul>
 										<li><p><span>фундамент буронабивной от 3 до 4м глубиной;</span></p></li>
-										<li><p><span>Несущая колонно-ригельная система + перекрытия: ребристые ж/б плиты с утеплением на 1 этаже + бетон; межэтажное ребристое бетонное перекрытие, ребристые ж/б плиты перекрытия с утеплением на кровле;</span></p></li>
+										<li><p><span>Сборно-монолитный каркас (несущая колонно-ригельная система + перекрытия: ребристые ж/б плиты с утеплением на 1 этаже + бетон; межэтажное ребристое бетонное перекрытие, ребристые ж/б плиты перекрытия с утеплением на кровле);</span></p></li>
 										<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 5 см + утеплитель 15 см + бетон 6 см;</span></p></li>
 										<li><p><span>Кровля - с водосточной системой и подшивкой софитами;</span></p></li>
 										<li><p><span>Лестница межэтажная деревянная с состариванием и шлифованием;</span></p></li>
@@ -1353,21 +1353,21 @@
 
 									<h3><span>Дополнительно оплачиваются:</span></h3>
 									<ul>
-										<li><p><span>Стояки холодного водоснабжения и канализации, подключение к сетям – 35 000 руб;</span></p></li>
-										<li><p><span>Перегородки межкомнатные из ПГП: от 100 тыс. до 170 тыс р;</span></p></li>
-										<li><p><span>Навес под авто - 150 000р;</span></p></li>
-										<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж, но не более 40см/50 см на дом;</span></p></li>
-										<li><p><span>Охрана на объекте = 35 000р/мес. (3 мес.);</span></p></li>
-										<li><p><span>Аренда дизельной электростанции + топливо - 90 000р (3 000р/ сутки, 1 мес.);</span></p></li>
-										<li><p><span>Доставка домокомплекта до стройплощадки: от 30 000р в зависимости от расположения;</span></p></li>
-										<li><p><span>Геодезические работы - от 15, 20, 25, 30 тыс р, в зависимости от дома;</span></p></li>
+										<li><p><span>Стояки холодного водоснабжения и канализации, подключение к сетям – 68 000 руб;</span></p></li>
+										<li><p><span>Перегородки межкомнатные из ПГП: от 140 тыс.р;</span></p></li>
+										<li><p><span>Услуги по обеспечению сохранности материальных ценностей и спецтехники – 40 тыс.р/мес. (3 месяца.);</span></p></li>
+										<li><p><span>Аренда дизельной электростанции + топливо - 100 000р (3 360р/ сутки, 1 мес.);</span></p></li>
+										<li><p><span>Доставка домокомплекта до стройплощадки: от 90 000р в зависимости от расположения;</span></p></li>
+										<li><p><span>Геодезические работы - от 20 тыс. р, в зависимости от площади дома и наличия границ участка;</span></p></li>
 										<li><p><span>Разрешительная документация (разрешение, тех документы, ввод) = 30 000р;</span></p></li>
-										<li><p><span>Подготовка участка под сборку дома (заезд на участок – труба 6м (диаметром 325мм) с отсыпкой остается у клиента + лаги на период стройки: от 50 до 120 тыс р;</span></p></li>
-										<li><p><span>Канализация - шамбо 10 куб/септик 1,5куб./сутки = 200 тыс. руб;</span></p></li>
-										<li><p><span>Скважина: в сезон (с мая по ноябрь) 3 500 руб/м п (примерно 40 м = 140 000р); насос + обвязка = 40 000р;</span></p></li>
-										<li><p><span>Подключение к свету от столба до дома (счетчик день/ночь, автоматы) от 30 до 45 тыс. руб;</span></p></li>
-										<li><p><span>Отопление: от эл. радиаторов до водяных теплых полов: от 70 тыс. руб.</span></p></li>
-										<li><p><span>Балконы с ограждением/без; ограждение крыльца</span></p></li>
+										<li><p><span>Подготовка участка под сборку дома (заезд на участок – труба 6м, диаметром 325мм), подготовка площадки под 25 тонный кран, под стройматериалы;</span></p></li>
+										<li><p><span>Канализация - шамбо 10 куб/септик 1,5куб./сутки = 265 тыс. руб;</span></p></li>
+										<li><p><span>Скважина: в сезон (с мая по ноябрь) 3 900 руб/м.п. (примерно 40 м = 156 000р); насос + обвязка, кессонный колодец, автоматика – 325 тыс.р.</span></p></li>
+										<li><p><span>Подключение к свету от столба до дома (счетчик день/ночь, УЗО, заземление, автоматы) 70 тыс. р;</span></p></li>
+										<li><p><span>Отопление: рассчитывается в зависимости от типа (водяной теплый пол, электр. теплый пол, электрорадиаторы);</span></p></li>
+										<li><p><span>Балконы с ограждением/ - 70 тыс.р.;</span></p></li>
+										<li><p><span>Навес под авто - 250 000р;</span></p></li>
+										<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж, но не более 40см/50 см на дом – от 50 тыс.р. в зависимости от площади дома</span></p></li>
 									</ul>
 
 									<h2 class="next-h">Пирог кровли</h2>
@@ -1868,117 +1868,99 @@
 						</tr>
 					</thead>
 					<tr>
-						<th rowspan="9">Собственность. Дом можно строить в ипотеку на 25 лет</th>
+						<th rowspan="6">Собственность. Дом можно строить в ипотеку на 25 лет</th>
 						<td>1</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>СП2</td>
 						<td>5.8</td>
 						<td>450,000</td>
 					</tr>
 					<tr>
-						<td>3</td>
-						<td>ул. Армейская</td>
-						<td>6.3</td>
-						<td>550,000</td>
-					</tr>
-					<tr>
 						<td>5</td>
-						<td>ул. Киевская 1</td>
+						<td>Киевская</td>
 						<td>6</td>
 						<td>1,000</td>
 					</tr>
 					<tr>
 						<td>6</td>
-						<td>КП "Экопрак Север"</td>
+						<td>Грушевые</td>
 						<td>6</td>
-						<td>300,000</td>
+						<td>420,000</td>
 					</tr>
 					<tr>
 						<td>7</td>
-						<td>КП "Экопрак Север"</td>
+						<td>Грушевые</td>
 						<td>8</td>
-						<td>400,000</td>
+						<td>560,000</td>
 					</tr>
 					<tr>
 						<td>8</td>
-						<td>КП "Экопрак Север"</td>
+						<td>Грушевые</td>
 						<td>10</td>
-						<td>500,000</td>
-					</tr>
-					<tr>
-						<td>9</td>
-						<td>КП "Экопарк Юг"</td>
-						<td>6.3</td>
-						<td>308,700</td>
-					</tr>
-					<tr>
-						<td>10</td>
-						<td>КП "Экопарк Юг"</td>
-						<td>8</td>
-						<td>392,000</td>
+						<td>700,000</td>
 					</tr>
 					<tr class="bdb">
 						<td>11</td>
-						<td>ул. Римская</td>
+						<td>Римская</td>
 						<td>9.5</td>
 						<td>760,000</td>
 					</tr>
 					<tr>
-						<th rowspan="9">Коттеджный посёлок "Солнечная поляна", субаренда на 25 лет.&nbsp; Дом можно строить в ипотеку на 25 лет</th>
+						<th rowspan="9">Солнечная поляна, субаренда на 25 лет.  Дом можно строить в ипотеку на 25 лет. <br>Подключение центрального водоснабжения - 200 тыс.руб.</th>
 						<td>179</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>4.7</td>
-						<td>400,000</td>
+						<td>352,500</td>
 					</tr>
 					<tr>
 						<td>123</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>7.78</td>
-						<td>660,000</td>
+						<td>583,500</td>
 					</tr>
 					<tr>
 						<td>269</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>7.92</td>
-						<td>670,000</td>
+						<td>594,000</td>
 					</tr>
 					<tr>
 						<td>268</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>6.1</td>
-						<td>520,000</td>
+						<td>457,500</td>
 					</tr>
 					<tr>
 						<td>266</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>6.05</td>
-						<td>514,000</td>
+						<td>453,750</td>
 					</tr>
 					<tr>
 						<td>23</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>13</td>
-						<td>1,070,000</td>
+						<td>945,000</td>
 					</tr>
 					<tr>
 						<td>117</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>15</td>
-						<td>1,280,000</td>
+						<td>1,126,500</td>
 					</tr>
 					<tr>
 						<td>81</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>8</td>
-						<td>640,000</td>
+						<td>562,500</td>
 					</tr>
 					<tr class="bdb">
 						<td>102</td>
-						<td>КП "Солнечная поляна"</td>
+						<td>75000</td>
 						<td>16.7</td>
-						<td>1,420,000</td>
+						<td>1,252,500</td>
 					</tr>
 					<tr>
-						<th rowspan="2">Строительство дома только за наличный расчет</th>
+						<th rowspan="2">строительство дома за наличный расчет</th>
 						<td>1</td>
 						<td>Усадьба</td>
 						<td>10.3</td>
